--- a/index.html
+++ b/index.html
@@ -101,11 +101,28 @@
             padding: 0.5rem 1rem;
             border: 2px solid var(--accent-color);
             transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .social-links a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: var(--accent-color);
+            transition: all 0.3s ease;
+            z-index: -1;
+        }
+
+        .social-links a:hover::before {
+            left: 0;
         }
 
         .social-links a:hover {
-            background: var(--accent-color);
-            transform: translateY(-3px);
+            color: var(--primary-color);
         }
 
         .social-links a i {
@@ -161,11 +178,28 @@
             border: 1px solid var(--accent-color);
             transition: all 0.3s ease;
             background: rgba(110, 84, 148, 0.05);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .repo-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(110, 84, 148, 0.2);
+            transition: all 0.3s ease;
+            z-index: -1;
+        }
+
+        .repo-item:hover::before {
+            left: 0;
         }
 
         .repo-item:hover {
             transform: translateX(10px);
-            background: rgba(110, 84, 148, 0.2);
             box-shadow: -4px 4px 10px rgba(110, 84, 148, 0.2);
         }
 
@@ -340,20 +374,33 @@
         </div>
 
         <div class="skill-tags">
-            <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">C++</span>
             <span class="skill-tag">Python</span>
             <span class="skill-tag">Django</span>
-            <span class="skill-tag">Node.js</span>
-            <span class="skill-tag">HTML5</span>
-            <span class="skill-tag">CSS</span>
-            <span class="skill-tag">Git</span>
-            <span class="skill-tag">SQL</span>
+            <span class="skill-tag">TensorFlow</span>
             <span class="skill-tag">PyQt5</span>
+            <span class="skill-tag">Keras</span>
+            <span class="skill-tag">Pandas</span>
+            <span class="skill-tag">Numpy</span>
+            <span class="skill-tag">Matplotlib</span>
+            <span class="skill-tag">Seaborn</span>
+
+        </div>
+        
+        <div class="skill-tags">
+            <span class="skill-tag">JavaScript</span>
+            <span class="skill-tag">Node.js</span>
+            <span class="skill-tag">CSS</span>
+            <span class="skill-tag">HTML5</span>
+        </div>
+        <div class="skill-tags">
+            <span class="skill-tag">Git</span>
+            <span class="skill-tag">Excel</span>
+            <span class="skill-tag">SQL</span>
         </div>
     </div>
 
     <script>
-        // Rorschach efekti için mouse takibi
         document.addEventListener('mousemove', (e) => {
             const rorschach = document.querySelector('.rorschach');
             const x = e.clientX / window.innerWidth;
@@ -365,8 +412,6 @@
                 transparent 60%)
             `;
         });
-
-        // Karanlık/Aydınlık mod toggle fonksiyonu
         function toggleTheme() {
             const root = document.documentElement;
             const currentPrimary = getComputedStyle(root).getPropertyValue('--primary-color');
@@ -380,6 +425,7 @@
             }
         }
     </script>
+
     <script>
         function updateDateTime() {
             const now = new Date();
@@ -391,5 +437,6 @@
         setInterval(updateDateTime, 1000);
         updateDateTime();
     </script>
+
 </body>
 </html>
