skill and kaggle add

--- a/index.html
+++ b/index.html
@@ -320,6 +320,9 @@
                 <a href="https://linkedin.com/in/muhammetfurkanaltin" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
+                <a href="https://www.kaggle.com/mfurkanaltn" target="_blank">
+                    <i class="fab fa-kaggle"></i> Kaggle
+                </a>
             </div>
         </header>
 
@@ -384,6 +387,7 @@
             <span class="skill-tag">Numpy</span>
             <span class="skill-tag">Matplotlib</span>
             <span class="skill-tag">Seaborn</span>
+            <span class="skill-tag">Scikit-Learn</span>
 
         </div>
         
