--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
                 </div>
                 <div class="contact-info">
                     <p><i class="fas fa-globe"></i> Türkiye</p>
-                    <p><i class="fas fa-briefcase"></i> Software Developer</p>
-                    <p><i class="fas fa-envelope"></i> muhammetfurkanaltin@gmail.com</p>
+                    <p><i class="fas fa-briefcase"></i> Data Scientist</p>
+                    <p><i class="fas fa-envelope"></i> m.furkangold@gmail.com</p>
                 </div>
             </div>
 
