--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <img src="https://avatars.githubusercontent.com/muhammetfurkanaltin" alt="Profil">
             </div>
             <h1>Muhammet Furkan Altın</h1>
-            <p>Software Developer</p>
+            <p>Data Scientist</p>
             
             <div class="social-links">
                 <a href="https://github.com/muhammetfurkanaltin" target="_blank">
