link fixed and skills add

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <a href="https://github.com/muhammetfurkanaltin" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="https://linkedin.com/in/muhammetfurkanaltin" target="_blank">
+                <a href="https://www.linkedin.com/in/furkan-alt%C4%B1n-9152aa329/" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
                 <a href="https://www.kaggle.com/mfurkanaltn" target="_blank">
@@ -388,6 +388,8 @@
             <span class="skill-tag">Matplotlib</span>
             <span class="skill-tag">Seaborn</span>
             <span class="skill-tag">Scikit-Learn</span>
+            <span class="skill-tag">PyTorch</span>
+            <span class="skill-tag">NLP</span>
 
         </div>
         
